<resources>
    <string name="app_name">MedManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_medicine_register">Add Medicine</string>
    <string name="menu_medicine_edit">Edit Medicine</string>

    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="leaflet">Leaflet</string>
    <string name="save">Save</string>
    <string name="add_item">Add Item</string>
    <string name="validity">Validity</string>
    <string name="quantity">Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="login">Login</string>
    <string name="singin">Sing In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirmpass">Confirm Password</string>
    <string name="register">Register</string>

</resources>