<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_login">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.medmanager.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_home_to_medicine_register"
            app:destination="@id/nav_medicine_register" />
        <action
            android:id="@+id/action_nav_home_to_medicineEditFragment"
            app:destination="@id/nav_medicine_edit" />
        <action
            android:id="@+id/action_nav_home_to_nav_login"
            app:destination="@id/nav_login" />
        <argument
            android:name="currentUser"
            app:argType="com.example.medmanager.models.User" />
    </fragment>

    <fragment
        android:id="@+id/nav_medicine_register"
        android:name="com.example.medmanager.ui.medicineRegister.MedicineRegisterFragment"
        android:label="@string/menu_medicine_register"
        tools:layout="@layout/fragment_medicine_register">
        <action
            android:id="@+id/action_medicine_register_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="isNewMedicine"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>
    <fragment
        android:id="@+id/nav_medicine_edit"
        android:name="com.example.medmanager.ui.medicineEdit.MedicineEditFragment"
        android:label="@string/menu_medicine_edit"
        tools:layout="@layout/fragment_medicine_edit" >
        <action
            android:id="@+id/action_nav_medicine_edit_to_nav_home"
            app:destination="@id/nav_home" />
        <argument
            android:name="currentMedicine"
            app:argType="com.example.medmanager.models.Medicine" />
    </fragment>
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.medmanager.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_singin"
            app:destination="@id/nav_singin" />
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_singin"
        android:name="com.example.medmanager.ui.singin.SinginFragment"
        android:label="Sing In"
        tools:layout="@layout/fragment_singin"/>
</navigation>